# cloud_run_mcp_proxy

./: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pipeline.yaml
src/cloud_run_mcp_proxy/: auth.py  proxy.py
